--- a/aboutpage.html
+++ b/aboutpage.html
@@ -4,29 +4,68 @@
     <title>Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   </head>
   <body>
-    <nav>
-      <a href="/">Home</a> |
-      <a href="/aboutpage.html" aria-current="page">About page</a> |
-      <a href="/contactpage.html">Contact page/RSVP</a> 
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/aboutpage.html" aria-current="page">About page</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contactpage.html">Contact page/RSVP</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
     <main>
       <h1>Event information</h1>
-      <h4>Activities:</h4>
-      <ul>
-        <li>Bowling!</li>
-        <li>Hanging out with friends (duh).</li>
-        <li>Eating pizza and cake!</li>
-        <li>Having fun!</li>
-      </ul>
-      <h4>Location:</h4>
-      <ul>
-        <li>Holiday Lanes</li>
-        <li><a href="https://goo.gl/maps/rX5nSyWpu2NFvjeY8"> Click here for the link to address </li>
-      </ul>
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+              <strong>Activities</strong>
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              <ul>
+                <li>Bowling!</li>
+                <li>Hanging out with friends (duh).</li>
+                <li>Eating pizza and cake!</li>
+                <li>Having fun!</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+              <strong>Location</strong>
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              <ul>
+                <li>Holiday Lanes</li>
+                <li><a href="https://goo.gl/maps/rX5nSyWpu2NFvjeY8"> Click here for the link to address </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
