--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
     <title>Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   </head>
   <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a> |
-      <a href="/aboutpage.html">About page</a> |
-      <a href="/contactpage.html">Contact page/RSVP</a> 
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="/" aria-current="page">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/aboutpage.html">About page</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contactpage.html">Contact page/RSVP</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
     <main>
       <h1>Official invitation to Alba's birthday party!</h1>
