--- a/contactpage.html
+++ b/contactpage.html
@@ -23,13 +23,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="/">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/aboutpage.html">About page</a>
+              <a class="nav-link" href="/aboutpage.html">About page</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contactpage.html" aria-current="page">Contact page/RSVP</a>
+              <a class="nav-link active" href="/contactpage.html" aria-current="page">Contact page/RSVP</a>
             </li>
           </ul>
         </div>
