--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <a class="nav-link active" href="/" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/aboutpage.html">About page</a>
+              <a class="nav-link" href="/aboutpage.html">About page</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/contactpage.html">Contact page/RSVP</a>
