--- a/contactpage.html
+++ b/contactpage.html
@@ -36,8 +36,8 @@
       </div>
     </nav>
     <main>
-      <h1>RSVP</h1>
-      <h3> Here are the ways to RSVP!</h3>
+      <h1 style="color: rgb(211,91,111)">RSVP</h1>
+      <h3 style="color: rgb(211,91,111)"> Here are the ways to RSVP!</h3>
       <p> Please send: "YES/NO Alba's Birthday Party" and number of people attending.</p>
       <table class="table table-hover">
         <thead>
