--- a/aboutpage.html
+++ b/aboutpage.html
@@ -30,7 +30,7 @@
       </div>
     </nav>
     <main>
-      <h1>Event information</h1>
+      <h1 style="color: rgb(211,91,111)">Event information</h1>
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
@@ -58,7 +58,7 @@
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
             <div class="accordion-body">
               <ul>
-                <li>Holiday Lanes</li>
+                <li> Holiday Lanes</li>
                 <li><a href="https://goo.gl/maps/rX5nSyWpu2NFvjeY8"> Click here for the link to address </li>
               </ul>
             </div>
