3 files modified, 1 added

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -26,6 +26,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/contactpage.html">Contact page/RSVP</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/roi.html">ROI Calculator</a>
+            </li>
           </ul>
         </div>
       </div>
