--- a/contactpage.html
+++ b/contactpage.html
@@ -32,6 +32,9 @@
             <li class="nav-item">
               <a class="nav-link active" href="/contactpage.html" aria-current="page">Contact page/RSVP</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/roi.html">ROI Calculator</a>
+            </li>
           </ul>
         </div>
       </div>
