--- a/roi.html
+++ b/roi.html
@@ -43,6 +43,9 @@
       <br/>
       <br/>
       <button id="calculate" class="btn btn-primary">Calculate</button>
+      <br/>
+      <br/>
+      <output type="text" id="ROI" placeholder="ROI"></output>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
@@ -52,7 +55,7 @@
           let investment = $('#investment').val();
           let revenue = $('#revenue').val();
           let expenses = $('#expenses').val();
-          
+          let roi = ((revenue-expenses-investment)/investment)*100
 
       });
       });
