--- a/index.html
+++ b/index.html
@@ -39,8 +39,21 @@
         <div class="card-img-overlay">
           <h5 class="card-title"> Official invitation to Alba's birthday party!</h5>
         </div>
+
       </div>
+      <br/>
+      <button id="toggleButton" class="btn btn-primary">Read more...</button>
+      <p id="readMore"> You are invited to Alba's 21st birthday party that will take place October 13th of 2023!</p>
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#toggleButton').click(function () {
+          $('#readMore').toggle();
+        });
+      });
+    </script>
   </body>
 </html>
