--- a/roi.html
+++ b/roi.html
@@ -45,7 +45,7 @@
       <button id="calculate" class="btn btn-primary">Calculate</button>
       <br/>
       <br/>
-      <output type="text" id="ROI" placeholder="ROI"></output>
+      <div id="result"></div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
@@ -56,6 +56,7 @@
           let revenue = $('#revenue').val();
           let expenses = $('#expenses').val();
           let roi = ((revenue-expenses-investment)/investment)*100
+          $('#result').text("ROI: " + roi.toFixed(2) + "%");
       });
       });
       
