--- a/aboutpage.html
+++ b/aboutpage.html
@@ -41,31 +41,29 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand">
+        <img src="https://clipart.info/images/ccovers/1518056311Pink-Heart-PNG-Pic.png" width="30" height="24" class="d-inline-block align-text-top">
+          Care4U
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/aboutpage.html" aria-current="page">Calendar </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contactpage.html">Self-care tips</a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link"  href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/aboutpage.html">Calendar</a>
+            <a class="nav-link" href="/contactpage.html">Self-care tips</a>
+          </div>
         </div>
       </div>
     </nav>
     <main>
      <div id='calendar'></div>
-     <div id="todo-list">
-      <h2>To-do List</h2>
+     <div class="container border" id="todo-list">
+      <h2 class="mt-2">To-do List</h2>
       <input type="text" id="todo-input" placeholder="Add a new to-do">
-      <button onclick="addTodo()">Add To-do</button>
-      <ul id="todos"></ul>
+      <button class="btn btn-outline-primary"onclick="addTodo()">Add To-do</button>
+      <ul id="todos" class="mt-2"></ul>
     </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
