--- a/exercise.html
+++ b/exercise.html
@@ -28,8 +28,8 @@
         <p class="description-text">
         Engage in regular physical activity. Whether it's a brisk walk, a workout at the gym, or yoga, exercise is essential for both physical and mental well-being.</br>Some examples of activities you might enjoy are:
         </p>
-    </div>
-    
+        </div>
+    <div>
     <div class="mt-2 row">
         <div class="col-4">
           <div id="list-example" class="list-group">
@@ -39,19 +39,22 @@
             <a class="list-group-item list-group-item-action" href="#list-item-4">Zumba</a>
           </div>
         </div>
-        <div class="col-8">
-          <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
-            <h4 id="list-item-1">Walking</h4>
-            <p>Walking every day is beneficial for both physical and mental well-being. Regular walking contributes to reduced stress, enhanced mood, and increased cognitive function, promoting an overall sense of well-being.</p>
-            <h4 id="list-item-2">Going to the gym</h4>
-            <p>Regular gym workouts offer numerous health benefits, including increased muscle strength, improved cardiovascular fitness, and weight management. Engaging in gym activities also promotes bone health, boosts mood by releasing endorphins, and supports better sleep patterns. Consistent gym sessions contribute to a holistic approach to physical fitness, fostering long-term health and wellness.</p>
-            <h4 id="list-item-3">Yoga</h4>
-            <p>Practicing yoga on a regular basis provides a holistic approach to well-being, combining physical, mental, and spiritual benefits. It enhances flexibility, strength, and balance, promoting a harmonious connection between mind and body. Yoga's focus on mindfulness and controlled breathing reduces stress, fosters relaxation, and improves mental clarity.</p>
-            <h4 id="list-item-4">Zumba</h4>
-            <p>Zumba is a dynamic and energetic dance-based workout that not only provides an enjoyable exercise experience but also offers various health benefits. Beyond the physical aspects, Zumba is known for its stress-relieving properties, boosting mood and enhancing coordination. Participating in Zumba classes adds an element of social engagement, fostering a sense of community and enjoyment in fitness.</p>
-          </div>
+            <div class="col-8">
+            <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
+                <h4 id="list-item-1">Walking</h4>
+                <p>Walking every day is beneficial for both physical and mental well-being. Regular walking contributes to reduced stress, enhanced mood, and increased cognitive function, promoting an overall sense of well-being.</p>
+                <h4 id="list-item-2">Going to the gym</h4>
+                <p>Regular gym workouts offer numerous health benefits, including increased muscle strength, improved cardiovascular fitness, and weight management. Engaging in gym activities also promotes bone health, boosts mood by releasing endorphins, and supports better sleep patterns. Consistent gym sessions contribute to a holistic approach to physical fitness, fostering long-term health and wellness.</p>
+                <h4 id="list-item-3">Yoga</h4>
+                <p>Practicing yoga on a regular basis provides a holistic approach to well-being, combining physical, mental, and spiritual benefits. It enhances flexibility, strength, and balance, promoting a harmonious connection between mind and body. Yoga's focus on mindfulness and controlled breathing reduces stress, fosters relaxation, and improves mental clarity.</p>
+                <div>
+                <h4 id="list-item-4">Zumba</h4>
+                <p>Zumba is a dynamic and energetic dance-based workout that not only provides an enjoyable exercise experience but also offers various health benefits. Beyond the physical aspects, Zumba is known for its stress-relieving properties, boosting mood and enhancing coordination. Participating in Zumba classes adds an element of social engagement, fostering a sense of community and enjoyment in fitness.</p>
+                </div>
+            </div>
+            </div>
         </div>
-      </div>
+    </div>
     </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="script.js"></script>
