--- a/exercise.html
+++ b/exercise.html
@@ -30,7 +30,7 @@
         </p>
         </div>
     <div>
-    <div class="mt-2 row">
+    <div class=" row">
         <div class="col-4">
           <div id="list-example" class="list-group">
             <a class="list-group-item list-group-item-action" href="#list-item-1">Walking</a>
@@ -49,7 +49,7 @@
                 <p>Practicing yoga on a regular basis provides a holistic approach to well-being, combining physical, mental, and spiritual benefits. It enhances flexibility, strength, and balance, promoting a harmonious connection between mind and body. Yoga's focus on mindfulness and controlled breathing reduces stress, fosters relaxation, and improves mental clarity.</p>
                 <div>
                 <h4 id="list-item-4">Zumba</h4>
-                <p>Zumba is a dynamic and energetic dance-based workout that not only provides an enjoyable exercise experience but also offers various health benefits. Beyond the physical aspects, Zumba is known for its stress-relieving properties, boosting mood and enhancing coordination. Participating in Zumba classes adds an element of social engagement, fostering a sense of community and enjoyment in fitness.</p>
+                <p>Zumba is a dynamic and energetic dance-based workout that not only provides an enjoyable exercise experience but also offers various health benefits. Beyond the physical aspects, Zumba is known for its stress-relieving properties, boosting mood and enhancing coordination. </br>Participating in Zumba classes adds an element of social engagement, fostering a sense of community and enjoyment in fitness.</p>
                 </div>
             </div>
             </div>
