--- a/contactpage.html
+++ b/contactpage.html
@@ -56,7 +56,7 @@
         </br>
         <div class="card" onclick="redirectToPage('mind.html')">
             <img src="https://www.verywellhealth.com/thmb/0aY2baW8Crg93FY7dqEpzyWy4uI=/3864x2579/filters:no_upscale():max_bytes(150000):strip_icc()/meditating-woman-56a792a05f9b58b7d0ebce12.jpg" alt="Sleep" class="card-image">
-            <h2 class=" mt-2 card-title">Mindfulness/Meditation</h2>
+            <h2 class=" mt-2 card-title">Mind/</br>Meditate</h2>
         </div>
         </br>
         <div class="card" onclick="redirectToPage('exercise.html')">
